--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div>
             <h3 class="person-name">Rohan Akurathi</h3>
             <p class="person-role">Web Developer</p>
-            <p class="person-bio">Hi, my name is Rohan Akurathi, I am a fourth year Statistics and Data Science student at University of California Los Angeles (UCLA). As a web developer I create the website stylistically and fundamentally putting together all our thoughts and ideas.</p>
+            <p class="person-bio">Hi, my name is Rohan Akurathi, I am a fourth year Statistics and Data Science student at UCLA. As a web developer I create the website stylistically and fundamentally putting together all our thoughts and ideas.</p>
           </div>
         </article>
       </div>
