--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Abbott, Grace. “Immigration and Crime (Report of Committee ‘G’ of the Institute).” Journal of the American Institute of Criminal Law and Criminology, vol. 6, no. 4, 1915, pp. 522–32, https://doi.org/10.2307/1132732.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Talks about three main ways in which immigration and crime rates are related and goes into detail on policies that can hurt or defend immigrants. The first of these ways is that the crime rate significantly increases when immigration rates also increase. In order to solve this, one must either limit immigration or start deportations. The second way is that sometimes those foreigners have different cultures and understandings, which could mean that their temptations are different. Therefore, there must be crime prevention programs to remedy this. And the last one is that it is necessary to have a program in place to ensure foreign-born people have the same access as domestic-born people in terms of getting justice.</p>
@@ -287,7 +287,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Borrell, Luisa N., and Farzana Kapadia. “The Escalating War on Immigrants Is a Public Health Crisis.” American Journal of Public Health, vol. 115, no. 8, 2025, pp. 1220–1221. https://www.proquest.com/scholarly-journals/escalating-war-on-immigrants-is-public-health/docview/3232513760/se-2.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">The authors question the claim that anti-immigration policies can protect public health. They believe these policies will force people to hide underground, which will harm public health. Moreover, Western policymakers will blame all the medical pressure on immigration, so the government will deliberately abandon those undocumented populations. Then, the authors use research on public health and immigration mental health to prove that “the U.S. public health system’s failure to protect immigrants is a failure of its own mission.”</p>
@@ -297,7 +297,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Deportation of Interned Aliens. Congressional Hearing, 1919-01-16. 1919, https://congressional.proquest.com/congressional/docview/t29.d30.hrg-1919-imn-0006?accountid=14512.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">This congressional hearing in 1919 covers H.R. 13965, a bill proposed by the Department of Justice to deport “undesired aliens,” targeting those interned during World War I and those convicted of crimes against U.S. law during the war. The House committee raised concerns over broad language that allowed deportation for “any offense.” This report helps connect policies of 1919 to the dataset’s odd reasons for deportation, highlighting parallels between policy and recorded cases.</p>
@@ -307,7 +307,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Golash-Boza, Tanya Maria. Deported: Immigrant Policing, Disposable Labor, and Global Capitalism. New York University Press, 2015. https://nyupress.org/9781479831183/deported.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Links mass deportation to global capitalism and labor control, showing how enforcement targets racialized workers to maintain economic inequality. Adds an economic and sociological view on deportation systems, aligning with the project’s focus on social impacts.</p>
@@ -317,7 +317,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Gulasekaram, Pratheepan. “The Second Amendment’s ‘People’ Problem.” Vanderbilt Law Review, vol. 76, no. 5, 2023, pp. 1437–1520. https://search.library.ucla.edu/permalink/01UCS_LAL/192ecse/cdi_proquest_journals_2875130842.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Examines the historical and legal status of non-citizens and their constitutional rights, arguing courts and Congress created a distinction between citizen rights and non-citizen privileges, leaving non-citizens vulnerable to mass deportation. Useful for explaining why deportations were disruptive and how limited protections affected communities.</p>
@@ -327,7 +327,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Hernandez, Kelly Lytle. Migra! A History of the U.S. Border Patrol. University of California Press, 2010. https://www.ucpress.edu/book/9780520266414/migra.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Traces the U.S. Border Patrol’s origins and shows how race and politics influenced enforcement, arguing deportation practices were rooted in racial discrimination. Provides historical context on deportation policy and enforcement culture, especially along the U.S.–Mexico border.</p>
@@ -337,7 +337,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Hernandez, Jose Angel. “Contemporary Deportation Raids and Historical Memory: Mexican Expulsions in the Nineteenth Century.” Aztlán, vol. 35, no. 2, 2010, pp. 115–42. https://search.library.ucla.edu/permalink/01UCS_LAL/192ecse/cdi_ingenta_journals_ic_csrc_00052604_v35n2_20211006_1656_default_tar_gz_s6.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Connects nineteenth-century anti-Mexican expulsions to later deportation practices, arguing repeated expulsions created a “historical memory” of vulnerability for Mexican American communities. Shows how early regional expulsions shaped distrust and collective identity, informing impacts around 1892–1921.</p>
@@ -347,7 +347,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Kellor, Frances A. “Needed—A Domestic Immigration Policy.” The North American Review, vol. 193, no. 4, 1911, p. 561. https://www.proquest.com/magazines/needed-domestic-immigration-policy/docview/1296780319/se-2.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Argues for reforming U.S. immigration policy to mitigate harms of existing legislation. Proposes distribution, protection, and education to help immigrants assimilate and critiques allowing immigrants in only to later deport them. Useful for examining how lack of resources and deportations disrupted families and communities.</p>
@@ -357,7 +357,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">King, Ryan D., and Denise N. Obinna. “Violent Crime and Immigrant Removals: Reasons and Determinants of Immigrant Deportations, 1908–1986.” Migration Letters, vol. 15, no. 2, 2018, pp. 239–254. https://search.library.ucla.edu/permalink/01UCS_LAL/192ecse/cdi_proquest_journals_2148530111.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Analyzes deportations 1908–1986 using immigration yearbooks, showing shifts from criminal grounds to paperwork issues and linking spikes in violent crime rates to increases in deportations. Helps contextualize numerical data with enforcement drivers, though light on media and political framing.</p>
@@ -367,7 +367,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Lauck, W. Jett. “The Significance of Recent Immigration.” The North American Review, vol. 195, no. 2, 1912, p. 201. https://search.library.ucla.edu/permalink/01UCS_LAL/192ecse/cdi_proquest_miscellaneous_1296792778.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Discusses impacts of recent immigration on U.S.-born citizens and earlier immigrants, arguing many arrivals were driven by transportation companies for short-term labor, depressing wages and working conditions. Advocates literacy tests and head taxes to curb unskilled labor. Provides background on economic arguments driving restrictive policies and deportations.</p>
@@ -377,7 +377,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Massey, Douglas S., and Karen A. Pren. “Unintended Consequences of U.S. Immigration Policy: Explaining the Post-1965 Surge from Latin America.” Population and Development Review, vol. 38, no. 1, 2012, pp. 1–29. https://doi.org/10.1111/j.1728-4457.2012.00470.x.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Explains how post-1965 restrictive policies unintentionally increased long-term Latin American migration, as enforcement discouraged return trips. Supports analysis of how policy shapes migration trends; data is credible but less current for recent effects.</p>
@@ -387,7 +387,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Nash, Lindsay. “Inventing Deportation Arrests.” Michigan Law Review, vol. 121, no. 8, 2023, pp. 1301–63. https://doi.org/10.36644/mlr.121.8.inventing.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Tracks how deportation arrests emerged as a distinct legal tool targeting non-citizens based on status, giving immigration agents broad powers. Shows the parallel enforcement system that left immigrants vulnerable between 1892 and 1921, clarifying legal risks to communities.</p>
@@ -397,7 +397,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Nuño, Lidia E., et al. “First, Do No Harm: Why Anti-Immigrant Policies in the United States Are a Public Health Concern.” Journal of Public Health Policy, vol. 43, no. 3, 2022, pp. 403–412. https://www.proquest.com/scholarly-journals/first-do-no-harm-why-anti-immigrant-policies/docview/2727899799/se-2.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Links anti-immigrant policies to mental health harms and identity stress in immigrant families, arguing these are public health issues. Recommends measuring policy impacts on health, investing in care in anti-immigrant regions, and supporting services for undocumented populations.</p>
@@ -407,7 +407,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Peirce, Paul S. “The Control of Immigration as an Administrative Problem.” The American Political Science Review, vol. 4, no. 3, 1910, pp. 374–89. https://doi.org/10.2307/1945870.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Reviews immigration policy changes since 1882, grouping them as restrictive, protective, distributive, and administrative (effectively restrictive and selective). Highlights focus on controlling the quality of immigrants rather than quantity.</p>
@@ -417,7 +417,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Seller, Maxine S. “Historical Perspectives on American Immigration Policy: Case Studies and Current Implications.” Law and Contemporary Problems, vol. 45, no. 2, 1982, pp. 137–162. https://doi.org/10.2307/1191406.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Synthesizes immigration policy debates from the 18th to early 20th centuries, arguing recurring concerns about jobs, culture, and loyalty reflect national fears more than immigrant actions. Offers historical framing for enforcement trends like those in the DHS data; limited on post-1965 analysis.</p>
@@ -427,7 +427,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Shulman, Max, and J. Chris Westgate, eds. Performing the Progressive Era: Immigration, Urban Life, and Nationalism on Stage. University of Iowa Press, 2019. https://muse.jhu.edu/book/65921.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Explores how immigration and immigrants shaped performance, minority representation, and social change on stage during the Progressive Era. Useful for understanding cultural conflicts and responses that underpinned deportation policies.</p>
@@ -437,7 +437,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">U.S. Department of Homeland Security, Office of Homeland Security Statistics. “Table 39. Aliens Removed or Returned: Fiscal Years 1892 to 2017.” Yearbook of Immigration Statistics, 2017. https://www.dhs.gov/immigration-statistics/yearbook/2017/table39.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Provides counts of removals and returns from 1892–2017, showing shifts from voluntary returns to formal removals and evolving enforcement severity. Reliable long-term data but lacks demographic details and year-to-year explanations.</p>
@@ -447,7 +447,7 @@
       <article class="bib-card">
         <header class="bib-head">
           <span class="cite-text">Ward, Robert DeC. “The New Immigration Act.” The North American Review, vol. 185, no. 619, 1907, pp. 587–93. https://www.jstor.org/stable/25105935.</span>
-          <span class="toggle">+</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
         </header>
         <div class="bib-body">
           <p class="bib-anno">Breaks down the 1907 Immigration Act, including increased head taxes, equal treatment for those deemed “imbecile,” and added physical tests for “aliens.” Outlines the act’s sections, illustrating how statutory changes shaped who could stay or be deported.</p>
