--- a/index.html
+++ b/index.html
@@ -311,6 +311,14 @@
       </article>
 
       <article class="card" style="grid-column: span 12;">
+        <h3 style="margin-top:0;">Reason for Deportation</h3>
+        <div style="position:relative; width:100%; padding-top:56.25%; background:#0f172a; border:1px solid var(--line); border-radius:12px; overflow:hidden;">
+          <iframe title="Reason for Deportation" src="https://public.tableau.com/views/Reason_17645671474780/Visualization?:showVizHome=no&:embed=yes" style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;" allowfullscreen></iframe>
+        </div>
+        <p style="margin:14px 0 0; color:#e5e7eb; line-height:1.7;">Looking at the graph itself we can see the difference in the two groups. The top four reasons for UK immigrants to be deported were due to “entered without inspection”, “contract laborers", “convicts/criminals” and “likely to become a public charge”. Compared to Mexican immigrants top four reasons were “contract laborers”, "likely to become a public charge”, “prosututes”, and "aliens who procure or attempt to bring prostitutes or females”. This is very telling of the attitude towards the different groups. This relates to our project as we want to compare the two groups and the reasoning behind their deportation. We then want to see how this affected their communities and the social impact these deportations had on surrounding communities as well.</p>
+      </article>
+
+      <article class="card" style="grid-column: span 12;">
         <h3 style="margin-top:0;">Pareto chart of reasons for deportation </h3>
         <div style="position:relative; width:100%; padding-top:56.25%; background:#0f172a; border:1px solid var(--line); border-radius:12px; overflow:hidden;">
           <iframe title="Pareto reasons" src="https://public.tableau.com/views/DataViz-DylanB/Sheet5?:showVizHome=no&:embed=yes" style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;" allowfullscreen></iframe>
