--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     .kicker{letter-spacing:2px; font-weight:800; opacity:.9; color:#fcd34d;}
     .title{font-family:"Playfair Display", "Times New Roman", serif; font-size:clamp(42px,7vw,94px); line-height:1; font-weight:800; margin:.2em 0; text-shadow:0 10px 30px rgba(0,0,0,.45);}
     .subtitle{font-size:clamp(18px,2.3vw,28px); font-weight:600; opacity:.95; color:#e5e7eb;}
+    .hero-caption{position:absolute; right:24px; bottom:14px; font-size:13px; color:#f9fafb; opacity:.85; text-shadow:0 2px 6px rgba(0,0,0,.6); text-align:right; max-width:80vw; white-space:nowrap;}
     .chevron{position:absolute; bottom:22px; left:50%; transform:translateX(-50%); width:44px; height:44px; border-radius:50%;
       border:2px solid rgba(255,255,255,.8); display:grid; place-items:center; transition:all .2s ease; background:rgba(5,7,13,.45);}
     .chevron:hover{transform:translateX(-50%) translateY(2px)}
@@ -98,7 +99,8 @@
     .anno{margin:.35rem 0 0 0; line-height:1.5; color:var(--ink);}
 
     .project-layout{display:flex; flex-direction:column; gap:26px; align-items:flex-start; margin-top:18px;}
-    .project-image{width:100%; max-width:280px; border-radius:14px; border:2px solid rgba(185,28,28,.7); box-shadow:0 16px 36px rgba(0,0,0,.35); object-fit:cover; margin-top:40px;}
+    .project-media{display:flex; flex-direction:column; align-items:center; gap:8px; width:100%; max-width:300px;}
+    .project-image{width:100%; max-width:300px; border-radius:14px; border:2px solid rgba(185,28,28,.7); box-shadow:0 16px 36px rgba(0,0,0,.35); object-fit:cover; margin-top:40px;}
     .project-card{margin:8px 0 0 0; display:block; flex:1; max-width:760px;}
     .project-copy{flex:1;}
     .project-text{margin:0 0 14px 0; color:#e5e7eb; line-height:1.75; font-size:18px;}
@@ -113,6 +115,8 @@
     .start-link:hover{text-decoration:underline;}
 
     .narrative-card p{text-indent:2em;}
+
+    .image-caption{margin:8px 0 0; color:var(--muted); font-size:14px; line-height:1.4;}
 
     .timeline-embed{width:100%; border:1px solid var(--line); border-radius:14px; overflow:hidden; box-shadow:0 10px 28px rgba(0,0,0,.3);}
     .timeline-embed iframe{width:100%; height:900px; border:0; background:#000;}
@@ -165,12 +169,16 @@
     <h1 class="title">Deportation Data Analysis</h1>
     <p class="subtitle">Diving beyond the numbers</p>
   </div>
+  <div class="hero-caption">Historic rail tracks framing early 20th-century deportation routes.</div>
 </header>
 
 <section id="home-content" class="page active">
   <div class="wrap">
     <div class="project-layout">
-      <img class="project-image" src="images/news_article.jpg" alt="Historic newspaper clipping on deportation">
+      <div class="project-media">
+        <img class="project-image" src="images/news_article.jpg" alt="Historic newspaper clipping on deportation">
+        <p class="image-caption">Historic La Opinión front page covering mass deportation arrests.</p>
+      </div>
       <div class="card project-card">
         <div class="project-copy">
           <p class="project-text">
@@ -218,6 +226,7 @@
         </div>
         <div class="timeline-list" id="timeline-list"></div>
       </div>
+      <p class="image-caption">Interactive timeline of key immigration and deportation events from 1900–1921.</p>
     </div>
 
     <div class="subsection" style="margin-top:34px;">
