--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
         <div style="position:relative; width:100%; padding-top:56.25%; background:#0f172a; border:1px solid var(--line); border-radius:12px; overflow:hidden;">
           <iframe title="Communities map" src="https://public.tableau.com/views/MapDylanB/Sheet2?:showVizHome=no&:embed=yes" style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;" allowfullscreen></iframe>
         </div>
+        <p style="margin:14px 0 0; color:#e5e7eb; line-height:1.7;">This map was created using Tableau. It displays significant English and Mexican communities within the United States, along with their populations. This data was found separately from our main data source, and the numbers came from the United States Census of 1920, meaning it uses population numbers from this year. This map was chosen because it is simplistic in nature yet clearly displays what needs to be shown. The size of each circle represents the size of the population within the cities, and the color represents the community within. One thing that should be noted, however, is that there is also a Mexican community in Chicago, with a population of 20,000, but it is covered by the dot representing the English community. We mustn't just look at the numbers representing these communities, but also where they were located, because of the context it provides.</p>
         <p style="margin:14px 0 0; color:#e5e7eb; line-height:1.7;">One specific point about the geographical data in this map is the specific locations of these communities. There are a large number of English communities in the Northeast because a majority of English immigrants came through Ellis Island, which is in New York City. In addition, there were many industrial centers in this area, which many English communities were connected to. In the Southwest, there are a large number of Mexican communities because they immigrated through the Southern border. There were large agricultural centers in the Southwest as well, which is where a majority of Mexicans worked. A majority of these communities were in these locations due to labor-related reasons. Overall, knowing the location of these communities is important to our project because we can see how these agricultural and industrial communities see how they were impacted by deportations. It helps put it into perspective as well, as we can see that the impact of them was felt widely and not in one single area.</p>
       </article>
 
@@ -717,6 +718,16 @@
         </header>
         <div class="bib-body">
           <p class="bib-anno">Breaks down the 1907 Immigration Act, including increased head taxes, equal treatment for those deemed “imbecile,” and added physical tests for “aliens.” Outlines the act’s sections, illustrating how statutory changes shaped who could stay or be deported.</p>
+        </div>
+      </article>
+
+      <article class="bib-card">
+        <header class="bib-head">
+          <span class="cite-text">United States Census Bureau. Fourteenth Census of the United States: 1920. Volume II: Population, General Report and Analytical Tables. Washington: Government Printing Office, 1922. Direct PDF: https://www2.census.gov/library/publications/decennial/1920/volume-2/41084484v2.pdf</span>
+          <button class="peek" type="button"><span class="carat">▶</span><span class="label">Notes</span></button>
+        </header>
+        <div class="bib-body">
+          <p class="bib-anno">Population figures for English and Mexican communities (1920 census) used in the interactive map of community locations.</p>
         </div>
       </article>
     </div>
